--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
-/src/input/云南/
-/src/input/
 /src/bin/
+.idea/
+/input/yn/file1.pdf
+/data/mark1.pdf
+/data/markhyt.pdf
+/data/marklhh.pdf
+/data/markwyz.pdf
+/data/markzk.pdf
